Long pending changes. Upgraded log4j and moved to Gradle build